<resources>
    <string name="app_name">Apkinson</string>
    <string name="title_settings">Einstellungen</string>
    <string name="general_info">Allgemeine Informationen</string>
    <string name="title_preference_language">Sprache</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_telephone">Telefonieren</string>
    <string name="checkbox_telephone_recording">Sprachaufnahme</string>
    <string name="preference_recording_summary">Erkennt Anrufe automatisch und zeichnet die Stimme des Benutzers auf, um sie zu analysieren.</string>
    <string name="preference_accel_summary">Erkennt Anrufe automatisch und zeichnet die Handbewegungen des Benutzers auf, um sie zu analysieren.</string>
    <string name="textbox_client_ID_title">Benutzerkennung</string>
    <string name="client_ID">0</string>
    <string name="textbox_version_ID_title">Anwendungsversion</string>
    <string name="version_ID">0.22 Beta</string>
    <string name="checkbox_telephone_accel">Bewegung</string>
    <string name="default_value_none">None</string>
    <string name="headline_coming_soon">Bald verfügbar!</string>
    <string name="text_coming_soon">An dieser Stelle haben Sie in Zukunft die Möglichkeit, Ihre gesammelten Ergebnisse zu verfolgen!</string>
    <string name="services">DIENSTE</string>
    <string name="results">ERGEBNISSE</string>
    <string name="rmsText">Visualisierung der letzten .wav Datei. Quadratischer Mittelwert je 20 ms.</string>
    <string name="buttonPlotUpdate">Aktualisieren!</string>
    <string name="call">Telefonat</string>
    <string name="time">Zeit</string>
    <string name="duration">Dauer</string>
    <string name="contact">In der Kotaktliste</string>
    <string name="direction">Status</string>
    <string name="file">Audiodatei</string>
    <string name="time_seconds">Sekunden</string>
    <string name="incoming">Eingehend</string>
    <string name="outgoing">Ausgehend</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="result">Ergebnis</string>
</resources>
