<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time"
            android:id="@+id/keyDate"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/valueDate"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:weightSum="5" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/duration"
            android:id="@+id/keyDuration"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/valueDuration"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:weightSum="5" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/contact"
            android:id="@+id/keyContacts"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/valueContacts"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:weightSum="5" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/direction"
            android:id="@+id/keyDirection"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/valueDirection"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:weightSum="5" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/file"
            android:id="@+id/keyFile"
            android:layout_weight="2"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/valueFile"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent"
            android:lines="2"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:weightSum="5" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/result"
            android:id="@+id/keyResult"
            android:layout_weight="2"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/valueResult"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent"
            android:lines="2"
            android:gravity="center_vertical" />
    </LinearLayout>

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/webView"
        android:layout_gravity="center_horizontal" />

</LinearLayout>